--- a/src/input.css
+++ b/src/input.css
@@ -1,3 +1,29 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: 'Inter', sans-serif;
+}
+
+.navbar-fixed {
+  @apply fixed z-[9999] bg-white bg-opacity-70 border-none;
+  backdrop-filter: blur(5px);
+  box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0);
+}
+
+.hamburger-line {
+  @apply w-[30px] h-[3px] my-2 block bg-dark transform origin-center transition-all duration-300 ease-in-out;
+}
+
+.hamburger-active > span:nth-child(1) {
+  @apply rotate-45 translate-y-1;
+}
+
+.hamburger-active > span:nth-child(2) {
+  @apply scale-0;
+}
+
+.hamburger-active > span:nth-child(3) {
+  @apply -rotate-45 translate-y-[-1px];
+}
